# WorkOps-AI-Benchmark

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: __init__.py  baseline.py  env.py  grader.py  main.py  models.py  tasks.py
server/: app.py
