[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-workops-env"
version = "0.1.0"
description = "OpenEnv-style AI WorkOps evaluation environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.2",
    "uvicorn==0.32.0",
    "pydantic==2.9.2",
    "openenv-core",
    "openai==1.54.4",
    "requests>=2.31.0",
]


[project.scripts]
server = "server.app:main"
